// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Metadata endpoints] [GET /api/v0/:chainName/metadata/:contractAddress] should return 400 error if requests doesn\`t pass validation 1`] = `
{
  "error": "Bad Request",
  "message": [
    "tokenIds must be an array",
    "tokenIds should not be empty",
  ],
  "statusCode": 400,
}
`;

exports[`[Metadata endpoints] [GET /api/v0/:chainName/metadata/:contractAddress] should return 400 error if requests doesn\`t pass validation 2`] = `
{
  "error": "Bad Request",
  "message": [
    "chainName must be a valid enum value",
  ],
  "statusCode": 400,
}
`;

exports[`[Metadata endpoints] [GET /api/v0/:chainName/metadata/:contractAddress] should return correct results based on params and query params 1`] = `
{
  "result": [],
  "statusCode": 200,
}
`;

exports[`[Metadata endpoints] [GET /api/v0/:chainName/metadata/:contractAddress] should return correct results based on params and query params 2`] = `
{
  "result": [
    {
      "attributes": [
        {
          "trait_type": "Background",
          "value": "Orange",
        },
        {
          "trait_type": "Body",
          "value": "Body",
        },
        {
          "trait_type": "Beak",
          "value": "Upset",
        },
        {
          "trait_type": "Eyes",
          "value": "Scared",
        },
        {
          "trait_type": "Eyebrows",
          "value": "Default",
        },
        {
          "trait_type": "Trousers",
          "value": "Pink",
        },
        {
          "trait_type": "Shirt",
          "value": "None",
        },
        {
          "trait_type": "Feet",
          "value": "Smart Shoes",
        },
        {
          "trait_type": "Hat",
          "value": "Green Bucket Hat",
        },
        {
          "trait_type": "Item",
          "value": "Pancakes",
        },
      ],
      "compiler": "Engine",
      "content": [
        {
          "type": "image",
          "url": "ipfs://QmanhhXvqBhBKbgxyQEYdmURaJjEeKPfDFZbjThC5in6dx/9745",
        },
      ],
      "date": 1643342687198,
      "description": "The star from AlphaBetty Books first publication.",
      "dna": "8763393910575a1668ec6696617204632dd80db9",
      "edition": 9745,
      "image": "ipfs://QmanhhXvqBhBKbgxyQEYdmURaJjEeKPfDFZbjThC5in6dx/9745",
      "ledger_metadata": {
        "ledger_stax_image": "{"staxResponseFixture":{"name":"NFT Token - Stax Metadata","image":"https://some.image.com/ipfs/123","describe":"my fascinating image"}}",
      },
      "name": "The Seagull finds his talent #9745",
    },
  ],
  "statusCode": 200,
}
`;

exports[`[Metadata endpoints] [GET /api/v0/:chainName/metadata/:contractAddress] should return correct results based on params and query params even if contract address is not checksum formatted 1`] = `
{
  "result": [],
  "statusCode": 200,
}
`;

exports[`[Metadata endpoints] [GET /api/v0/:chainName/metadata/:contractAddress] should return correct results based on params and query params even if contract address is not checksum formatted 2`] = `
{
  "result": [
    {
      "attributes": [
        {
          "trait_type": "Background",
          "value": "Orange",
        },
        {
          "trait_type": "Body",
          "value": "Body",
        },
        {
          "trait_type": "Beak",
          "value": "Upset",
        },
        {
          "trait_type": "Eyes",
          "value": "Scared",
        },
        {
          "trait_type": "Eyebrows",
          "value": "Default",
        },
        {
          "trait_type": "Trousers",
          "value": "Pink",
        },
        {
          "trait_type": "Shirt",
          "value": "None",
        },
        {
          "trait_type": "Feet",
          "value": "Smart Shoes",
        },
        {
          "trait_type": "Hat",
          "value": "Green Bucket Hat",
        },
        {
          "trait_type": "Item",
          "value": "Pancakes",
        },
      ],
      "compiler": "Engine",
      "content": [
        {
          "type": "image",
          "url": "ipfs://QmanhhXvqBhBKbgxyQEYdmURaJjEeKPfDFZbjThC5in6dx/9745",
        },
      ],
      "date": 1643342687198,
      "description": "The star from AlphaBetty Books first publication.",
      "dna": "8763393910575a1668ec6696617204632dd80db9",
      "edition": 9745,
      "image": "ipfs://QmanhhXvqBhBKbgxyQEYdmURaJjEeKPfDFZbjThC5in6dx/9745",
      "ledger_metadata": {
        "ledger_stax_image": "{"staxResponseFixture":{"name":"NFT Token - Stax Metadata","image":"https://some.image.com/ipfs/123","describe":"my fascinating image"}}",
      },
      "name": "The Seagull finds his talent #9745",
    },
  ],
  "statusCode": 200,
}
`;

exports[`[Metadata endpoints] [GET /api/v1/:chainName/metadata/:contractAddress/:tokenId] should return 400 error if validation doesn\`t pass 1`] = `
{
  "error": "Bad Request",
  "message": [
    "chainName must be a valid enum value",
  ],
  "statusCode": 400,
}
`;

exports[`[Metadata endpoints] [GET /api/v1/:chainName/metadata/:contractAddress/:tokenId] should return 404 error if requested item doesn\`t exist in our DB 1`] = `
{
  "error": "Not Found",
  "message": "Contract address '0x33EeCbf908478C10614626A9D304bfe18B78DD73' not found",
  "statusCode": 404,
}
`;

exports[`[Metadata endpoints] [GET /api/v1/:chainName/metadata/:contractAddress/:tokenId] should return correct result based on request params 1`] = `
{
  "result": {
    "chain": "eth",
    "contractMetadata": {
      "address": "0xE1E484251ffFee048A839bc2d68C160BD8C82aBB",
      "name": "Lost Illusion",
      "tokenType": "ERC-721",
    },
    "metadata": {
      "attributes": [
        {
          "trait_type": "Background",
          "value": "background-96",
        },
        {
          "trait_type": "Flare",
          "value": "Light red",
        },
        {
          "trait_type": "Clothes",
          "value": "Striped vest",
        },
        {
          "trait_type": "Ears",
          "value": "Normal",
        },
        {
          "trait_type": "Mouth",
          "value": "Tongue out",
        },
        {
          "trait_type": "Eyes",
          "value": "Laser eye",
        },
        {
          "trait_type": "Top",
          "value": "Party",
        },
      ],
      "description": "Rich ape #1088 from unique collection, find out more at https://www.richapes.club",
      "image": "ipfs://QmRYe4DGMqBUquW6yzHFRFBNMU794ygRrxvFBwLJ6xfArG/1088.png",
      "ledger_metadata": {
        "ledger_stax_image": "{"staxResponseFixture":{"name":"NFT Token - Stax Metadata","image":"https://some.image.com/ipfs/123","describe":"my fascinating image"}}",
      },
    },
    "tokenId": "0x0441",
    "tokenType": "ERC-721",
    "tokenURI": "ipfs://QmdqggiNGU1oxhjpn6t8GUrtCXSSuVmdbTz1FhtRCcnFyy/382.json",
  },
  "statusCode": 200,
}
`;

exports[`[Metadata endpoints] [GET /api/v1/:chainName/metadata/:contractAddress/:tokenId] should return correct result based on request params even if a contract address is not checksum formatted 1`] = `
{
  "result": {
    "chain": "eth",
    "contractMetadata": {
      "address": "0xE1E484251ffFee048A839bc2d68C160BD8C82aBB",
      "name": "Lost Illusion",
      "tokenType": "ERC-721",
    },
    "metadata": {
      "attributes": [
        {
          "trait_type": "Background",
          "value": "background-96",
        },
        {
          "trait_type": "Flare",
          "value": "Light red",
        },
        {
          "trait_type": "Clothes",
          "value": "Striped vest",
        },
        {
          "trait_type": "Ears",
          "value": "Normal",
        },
        {
          "trait_type": "Mouth",
          "value": "Tongue out",
        },
        {
          "trait_type": "Eyes",
          "value": "Laser eye",
        },
        {
          "trait_type": "Top",
          "value": "Party",
        },
      ],
      "description": "Rich ape #1088 from unique collection, find out more at https://www.richapes.club",
      "image": "ipfs://QmRYe4DGMqBUquW6yzHFRFBNMU794ygRrxvFBwLJ6xfArG/1088.png",
      "ledger_metadata": {
        "ledger_stax_image": "{"staxResponseFixture":{"name":"NFT Token - Stax Metadata","image":"https://some.image.com/ipfs/123","describe":"my fascinating image"}}",
      },
    },
    "tokenId": "0x0441",
    "tokenType": "ERC-721",
    "tokenURI": "ipfs://QmdqggiNGU1oxhjpn6t8GUrtCXSSuVmdbTz1FhtRCcnFyy/382.json",
  },
  "statusCode": 200,
}
`;
